newchanges with bootstrapn lib

--- a/28 FEB 2025/index3.html
+++ b/28 FEB 2025/index3.html
@@ -40,7 +40,7 @@ body {
   text-align: center;
   background-image: url(image6.jpg);
   color:black;
-  width:400px;
+  width:100%;
   height:600px;
 
 }
@@ -112,7 +112,7 @@ body {
 <div class="header">
   <h1>Mysore palace</h1>
   <p>Mysore Palace in Karnataka is a masterpiece of Indo-Saracenic architecture. It is known for its <b>intricate details, grand exteriors, and opulent interiors.</b></p>
-  <img src="image6.jpg" alt="Trulli" width="380" height="400">
+  <img src="image6.jpg" alt="Trulli" width="100%" >
 </div>
 
 
@@ -122,27 +122,27 @@ body {
   <div class="side">
     <h1>Photos </h1>
     <h2>Palace view</h2>
-    <img src="image8.png" alt="Trulli" width="380" height="200">
+    <img src="image8.png" alt="Trulli" width="380" >
     <p>The Mysore Palace, also known as Amba Vilas, is a famous palace in Mysore, Karnataka. It has a rich history that includes destruction, rebuilding, and political upheavals.</p>
     <h1>Near Places</h1>
     <p style="font-size :25px;"><b>Chamundi Hill</b></p>
-    <img src="image3.png" alt="Trulli" width="380" height="200">
+    <img src="image3.png" alt="Trulli" width="380" >
     <p>Chamundi Hills are a sacred pilgrimage site in Karnataka, India, that includes the Chamundeshwari Temple and the Nandi bull. The hills are located 13 kilometers east of Mysore...... </p>
     <p style="font-size :25px;"><b>Mysore ZOO</b></p>
-    <img src="image10.png" alt="Trulli" width="380" height="200">
+    <img src="image10.png" alt="Trulli" width="380" >
     <p>Mysore Zoo, officially known as Sri Chamarajendra Zoological Gardens, is a composite of zoological gardens and animal park located in the southern Indian city of Mysore, Karnataka.....</p>
     <p style="font-size :25px;"><b>St.Philomena's Cathedral</b></p>
-    <img src="image12.png" alt="Trulli" width="380" height="200">
+    <img src="image12.png" alt="Trulli" width="380" >
     <p>a Catholic church and the cathedral of the Diocese of Mysore, India. Neo Gothic in style, it was constructed in 1936 during the reign of Maharaja Krishnaraja .....</p>
     <p style="font-size :25px;"><b>Brindavan Gardens.</b></p>
-    <img src="image13.png" alt="Trulli" width="380" height="200">
+    <img src="image13.png" alt="Trulli" width="380">
     <p>Brindavan Gardens is a 60-acre botanical garden in the Mandya district of Karnataka, India. It's located at the base of the Krishnaraja Sagar Dam (KRS). The gardens are known for their fountains, flower beds, and lawns..... </p>
 
   </div>
   <div class="main">
     <h1>AMBARI</h1>
     <h3>The Mysore Ambari, also known as the Golden Howdah, is a 750 kg golden elephant seat that symbolizes the rich heritage of Mysore. It is the main attraction of the Mysore Dasara festival. </h3>
-    <img src="image18.png" alt="Trulli" width="380" height="400">
+    <img src="image18.png" alt="Trulli" width="100%">
     <p>The Wodeyar dynasty commissioned the Ambari in 1917. 
       The Ambari is a wooden structure covered with gold sheets and precious stones. 
       The Ambari has two wide seats in rows, bigger than the interiors of a family car. 
@@ -150,14 +150,14 @@ body {
   
     <h1> ARCHITECTURE</h1>
     <h3>Mysore Palace in Karnataka is a masterpiece of Indo-Saracenic architecture. It is known for its intricate details, grand exteriors, and opulent interiors. </h3>
-    <img src="image15.png" alt="Trulli" width="380" height="400">
+    <img src="image15.png" alt="Trulli" width="100%">
     <p>The palace is a three-story structure with square towers at each cardinal point 
       It features a variety of arches, canopies, bay windows, and columns 
       The palace incorporates many styles, including Hindu, Muslim, Rajput, and Gothic........ </p>
 
     <h1>INTERIOR DESIGN</h1>
     <h3>Mysore Palace in Karnataka is a masterpiece of Indo-Saracenic architecture. It is known for its intricate details, grand exteriors, and opulent interiors. </h3>
-    <img src="image17.png" alt="Trulli" width="380" height="400">
+    <img src="image17.png" alt="Trulli" width="100%" >
     <p>Durbar Hall: Also known as the Diwan-e-Khas, this hall has a ceiling with ornate designs, sculpted pillars, and stained glass windows
       Kalyana Mantapa: The wedding hall has a domed ceiling with stained glass and intricate gold motifs
       Ambavilas Hall: This hall has a golden throne, stained glass windows, and fine carvings
